// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivationChecklist render 0/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <CheckboxBlankCircleIcon
            className="icon-inline text-muted"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 0/1 complete 2`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <CheckboxBlankCircleIcon
            className="icon-inline text-muted"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render 1/1 complete 1`] = `
<div
  className="list-group list-group-flush "
>
  <div
    className="list-group-item list-group-item-action"
  >
    <div
      data-tooltip="detail1"
      onClick={[Function]}
    >
      <button
        className="btn btn-link text-left w-100 p-0"
        type="button"
      >
        <div
          className="d-flex justify-content-between"
        >
          <span
            className="mr-2"
          >
            title1
          </span>
          <CheckIcon
            className="icon-inline text-success"
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`ActivationChecklist render loading 1`] = `
<div
  className="loading-spinner icon-inline my-2"
/>
`;
